err/fwrap.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fwrap'...
Listing './lib/python3.5/site-packages/fwrap/fparser'...
Compiling './lib/python3.5/site-packages/fwrap/fparser/Fortran2003.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/Fortran2003.py", line 30
    print '%s(%r) -> %r' % (cls.__name__, string, str(r))
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/api.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/api.py", line 74
    raise TypeError,'Expected string or filename input but got %s' % (type(input))
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/base_classes.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/base_classes.py", line 45
    raise AttributeError,'%s instance has no attribute %r, '\
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/block_statements.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/block_statements.py", line 37
    raise AnalyzeError,'Implicit rules mapping is null while getting %r type' % (name)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/parsefortran.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/parsefortran.py", line 116
    print block
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fwrap/fparser/pattern_tools.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/pattern_tools.py", line 96
    assert abs(self).match(pattern_match),`self,string,t,pattern_match`
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/readfortran.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/readfortran.py", line 156
    assert self.line, `line, linenospan, label`
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/sourceinfo.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/sourceinfo.py", line 108
    print '%s: isfree=%s, isstrict=%s'  % (filename, isfree, isstrict)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/splitline.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/splitline.py", line 384
    assert l==['abc\\\' def','"12\\"3"','"56"','dfad','\'a d\''],`l`
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/statements.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/statements.py", line 254
    assert line[-1]==')',`line`
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/typedecl_statements.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/typedecl_statements.py", line 105
    assert line.lower().startswith(clsname),`line,clsname`
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fparser/utils.py'...
***   File "./lib/python3.5/site-packages/fwrap/fparser/utils.py", line 86
    assert i!=-1,`newline`
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/fwrap_setup.py'...
***   File "./lib/python3.5/site-packages/fwrap/fwrap_setup.py", line 157
    print fsrc
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fwrap/main.py'...
***   File "./lib/python3.5/site-packages/fwrap/main.py", line 465
    print vandl
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fwrap/pyparsing_py2.py'...
***   File "./lib/python3.5/site-packages/fwrap/pyparsing_py2.py", line 2514
    except ParseException, err:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fwrap/visitor.py'...
***   File "./lib/python3.5/site-packages/fwrap/visitor.py", line 62
    print type(self), type(obj)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fwrap-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
